# Python-Expense-Tracker

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
.ebextentions/: django.config
expense_tracker/: settings.py  urls.py
transactions/: forms.py  models.py  urls.py  views.py
transactions/migrations/: 0001_initial.py  0002_alter_transaction_category_alter_transaction_date_and_more.py  0003_alter_transaction_category.py
transactions/templates/transactions/: allexpenses.html  base.html  edit.html  index.html  navbar.html  newtransaction.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_userprofile_monthly_budget.py  0003_alter_userprofile_user.py
users/templates/users/: base.html  login.html  logout.html  profile.html  register.html
