[tool.poetry]
name = "python-expense-tracker"
version = "0.1.0"
description = ""
authors = ["Akshatha.L <akshatha.26997@gmail.com>"]
readme = "README.md"
packages = [{include = "python_expense_tracker"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.1"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
